test/onceCall1_4.slq

def main(){
	x:=H(0);
	y:=dup(x);
	f:=()⇒CNOT(x,y);
	measure(x);
	return (f(),f()); /// error
}
